--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
         	<section>
         		<h2>Performancewinst</h2>
         		<table style="font-size:28px; padding-bottom:1em;">
-					<tr><th></th><th>Gem. zonder</th><th>Afwijking zonder</th><th>Gen. met</th><th>Afwijking met<th>Winst</th></tr>
+					<tr><th></th><th>Gem. zonder</th><th>Afwijking zonder</th><th>Gem. met</th><th>Afwijking met<th>Winst</th></tr>
 					<tr><th>Demo 1</th><td>648.654ms</td><td>805ms</td><td>499.752ms</td><td>707ms</td><td>22,96%</td></tr>
 					<tr><th>TipGrowth</th><td>8.263ms</td><td>91ms</td><td>8.037ms</td><td>89ms</td><td>2,74%</td></tr>
 					<tr><th>Globaal</th><td>3.749.877ms</td><td>1.936ms</td><td>3.134.383ms</td><td>1.770ms</td><td>16,41%</td></tr>
@@ -606,6 +606,18 @@
 				<li class="fragment">Documentatie</li>
 				<li class="fragment">Code conventions</li>
 				<li class="fragment">Templates</li>
+		    </ol>
+            <aside class="notes">
+                Documentatie -> Heel belangrijk om nieuwe programmeurs in te leiden in een project
+                             -> Moeilijk om te onderhouden tijdens het programmeren
+                             -> Achteraf geschreven en dus vaak beperkt, steken laten vallen, bleh
+                Code conventions -> Uniforme stijl is belangrijk voor de leesbaarheid van code, zeker als doc faalt
+                                 -> Eerste grote project, belang viel nu pas op
+                                 -> Soms eigen gewoontes opzij zetten om de stijl van het project over te nemen
+                Templates -> Kracht en versatiliteit ontdekt
+                          -> Onderdelen worden op compile time pas aan mekaar gelinkt 
+                          -> Documentatie van extra belang aangezien zelfs een slimme editor/IDE moeilijk wijs kan worden 
+            </aside>
 		</section>
 		<section>
 			<h2>Demo</h2>
